SERVER-23136 Count command should return InvalidNamespace instead of BadValue